SubBt/force-app/main/default/objects/RFI__c/RFI__c.object-meta.xml
<CustomObject>
    <label>RFI</label>
    <nameField>
        <displayFormat>RFI - {00000}</displayFormat>
        <label>RFI #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RFIs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>