SubBt/force-app/main/default/objects/RFI__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Person who is responsible for answering the RFI.</inlineHelpText>
    <label>Assigned To</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>RFIs (Assigned To)</relationshipLabel>
    <relationshipName>RFIs</relationshipName>
    <type>Lookup</type>
</CustomField>