SubBt/force-app/main/default/objects/RFI__c/fields/Communityuserid__c.field-meta.xml
<CustomField>
    <fullName>Communityuserid__c</fullName>
    <formula>if( $User.Account_Id__c == Vendor_Account__c ,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Communityuserid</label>
    <type>Checkbox</type>
</CustomField>