SubBt/force-app/main/default/objects/RFI__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>RFIs (Contact)</relationshipLabel>
    <relationshipName>RFIs2</relationshipName>
    <type>Lookup</type>
</CustomField>