SubBt/force-app/main/default/objects/RFI__c/fields/Cost_Impact__c.field-meta.xml
<CustomField>
    <fullName>Cost_Impact__c</fullName>
    <inlineHelpText>Are there potential cost impacts to the project?</inlineHelpText>
    <label>Cost Impact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>