SubBt/force-app/main/default/objects/RFI__c/fields/Date_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_Sent__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <inlineHelpText>This is the date that the Vendor originally sent the RFI.</inlineHelpText>
    <label>Date Originally Sent</label>
    <type>DateTime</type>
</CustomField>