SubBt/force-app/main/default/objects/RFI__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <inlineHelpText>When the response is due.</inlineHelpText>
    <label>Due Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>