SubBt/force-app/main/default/objects/RFI__c/fields/Last_Responded_By__c.field-meta.xml
<CustomField>
    <fullName>Last_Responded_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the last user to respond to this RFI.</inlineHelpText>
    <label>Last Responded By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RFIs</relationshipName>
    <type>Lookup</type>
</CustomField>