SubBt/force-app/main/default/objects/RFI__c/fields/Last_Responded_By_New__c.field-meta.xml
<CustomField>
    <fullName>Last_Responded_By_New__c</fullName>
    <formula>Last_Responded_By__r.FirstName &amp; LastModifiedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Responded By</label>
    <type>Text</type>
</CustomField>