SubBt/force-app/main/default/objects/RFI__c/fields/Last_Responded_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Responded_Date__c</fullName>
    <label>Last Responded Date</label>
    <type>Date</type>
</CustomField>