SubBt/force-app/main/default/objects/RFI__c/fields/Private__c.field-meta.xml
<CustomField>
    <fullName>Private__c</fullName>
    <defaultValue>false</defaultValue>
    <label>private</label>
    <type>Checkbox</type>
</CustomField>