SubBt/force-app/main/default/objects/RFI__c/fields/Response_Required_By__c.field-meta.xml
<CustomField>
    <fullName>Response_Required_By__c</fullName>
    <label>Response Required By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>