SubBt/force-app/main/default/objects/RFI__c/fields/RFI_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>RFI_Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This assignment comes from the RFQ/RFI Owner field.  This is a default user that is responsible for answering RFI questions.</inlineHelpText>
    <label>RFI Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RFIs2</relationshipName>
    <type>Lookup</type>
</CustomField>