SubBt/force-app/main/default/objects/RFI__c/fields/RFI_Assigned_To_New__c.field-meta.xml
<CustomField>
    <fullName>RFI_Assigned_To_New__c</fullName>
    <formula>RFI_Assigned_To__r.FirstName &amp;&quot; &quot; &amp; RFI_Assigned_To__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RFI Assigned To</label>
    <type>Text</type>
</CustomField>