SubBt/force-app/main/default/objects/RFI__c/fields/RFI_From_Site__c.field-meta.xml
<CustomField>
    <fullName>RFI_From_Site__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RFI From Site</label>
    <type>Checkbox</type>
</CustomField>