SubBt/force-app/main/default/objects/RFI__c/fields/RFI_Number__c.field-meta.xml
<CustomField>
    <fullName>RFI_Number__c</fullName>
    <formula>Project__r.Auto_Number__c &amp;&quot;-&quot;&amp;  Auto_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RFI #</label>
    <type>Text</type>
</CustomField>