SubBt/force-app/main/default/objects/RFI__c/fields/RFI_Reassigned_To__c.field-meta.xml
<CustomField>
    <fullName>RFI_Reassigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>New user who has been assigned to this RFI.  This use is not responsible for answering this RFI.</inlineHelpText>
    <label>RFI Reassigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RFIs3</relationshipName>
    <type>Lookup</type>
</CustomField>