SubBt/force-app/main/default/objects/RFI__c/fields/RFQ_To_Vendor__c.field-meta.xml
<CustomField>
    <fullName>RFQ_To_Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is where you can view all the communication, documentation and other information for this particular Vendor.</inlineHelpText>
    <label>Vendor RFQ Details</label>
    <referenceTo>RFQ_To_Vendor__c</referenceTo>
    <relationshipLabel>RFIs</relationshipLabel>
    <relationshipName>RFIs</relationshipName>
    <type>Lookup</type>
</CustomField>