SubBt/force-app/main/default/objects/RFI__c/fields/Schedule_Impact__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Impact__c</fullName>
    <inlineHelpText>Is the schedule at risk?</inlineHelpText>
    <label>Schedule Impact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>