SubBt/force-app/main/default/objects/RFI__c/fields/Submitted_By__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>User from the vendor account that submitted the RFI.</inlineHelpText>
    <label>Submitted By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RFIs1</relationshipName>
    <type>Lookup</type>
</CustomField>