SubBt/force-app/main/default/objects/RFI__c/fields/Users_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Users_Contacts__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Users/Contacts</label>
    <referenceTo>Users_Contacts__c</referenceTo>
    <relationshipLabel>RFIs</relationshipLabel>
    <relationshipName>RFIs</relationshipName>
    <type>Lookup</type>
</CustomField>