SubBt/force-app/main/default/objects/RFI__c/fields/Vendor_Account__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The vendor account that has been invited to bid on this RFQ.</inlineHelpText>
    <label>Vendor Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>RFIs</relationshipLabel>
    <relationshipName>RFIs</relationshipName>
    <type>Lookup</type>
</CustomField>