SubBt/force-app/main/default/objects/RFI__c/recordTypes/Existing_Record.recordType-meta.xml
<RecordType>
    <fullName>Existing_Record</fullName>
    <active>true</active>
    <label>Existing Record</label>
</RecordType>