SubBt/force-app/main/default/objects/RFI__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RFQ__c</columns>
    <columns>Subject__c</columns>
    <columns>Question__c</columns>
    <columns>Status__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>Contractor__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Project__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>