SubBt/force-app/main/default/objects/RFI__c/listViews/RFI_Queue.listView-meta.xml
<ListView>
    <fullName>RFI_Queue</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>Question__c</columns>
    <columns>Status__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>Contractor__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Project__c</columns>
    <filterScope>Queue</filterScope>
    <label>RFI Queue</label>
    <queue>RFI</queue>
    <sharedTo>
        <group>RFI</group>
    </sharedTo>
</ListView>