SubBt/force-app/main/default/objects/RFI__c/listViews/RFI_RFI.listView-meta.xml
<ListView>
    <fullName>RFI_RFI</fullName>
    <filterScope>Queue</filterScope>
    <label>RFI</label>
    <queue>RFI</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>